Cambio list of para hacerlo compatible con java 8 y arreglo indentación